--- a/index.html
+++ b/index.html
@@ -606,7 +606,7 @@ ServerLog(@"User logged in: %@", username);
         <h2>Cập nhật & Thảo luận</h2>
         <p>Tham gia cộng đồng NemG để cập nhật công cụ và thảo luận:</p>
         <ul>
-          <li><a href="https://discord.gg/nemg" target="_blank" style="color:#0f0;">Discord: https://discord.gg/your_discord_link</a></li>
+          <li><a href="https://discord.gg/nemg" target="_blank" style="color:#0f0;">Discord: https://discord.gg/nemg</a></li>
         </ul>
       </section>
 
